--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container-lg">
         <!-- <a class="navbar-brand" href="#">Conf Bs As</a> -->
         <span><img src="./images/codoacodo.png" alt="Logo CaC"></span>
-        <h1 class="navbar-brand-h1 me-auto">Conf Bs As</h1>
+        <h1 class="navbar-brand-h1 me-auto">Conferencia Bs As</h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
